--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -5,6 +5,10 @@
   font-family: 'Arial', sans-serif;
 }
 
+h1 {
+  margin-bottom: 25px;
+}
+
 /* Header styling */
 .header {
   display: flex;
@@ -63,6 +67,10 @@ button {
 
 /* Table Styling */
 
+.table-container {
+  padding: 10px;
+}
+
 table {
   width: auto;
   border-collapse: collapse;
@@ -112,8 +120,44 @@ tr:hover .table-edit-link {
   background-color: #4b6a99;
 }
 
+/* Heading styling */
+
+.heading-container {
+  padding: 10px;
+}
+
+.filter-form input {
+  margin: 5px;
+}
+
+.filter-form input:first-child {
+  margin: 5px 5px 5px 0px;
+}
+
+/* Form styling */
+
+.form-container {
+  margin: 25px;
+}
+
+form p {
+  display: inline;
+}
+
+.message {
+  margin-left: 25px;
+}
+
+.success {
+  color: green;
+}
+
+.fail {
+  color: red;
+}
+
 .input-wrapper {
-  margin: 10px;
+  margin: 10px 10px 10px 0px;
 }
 
 .input-wrapper label {
@@ -173,7 +217,7 @@ tr:hover .table-edit-link {
   margin-right: 0px;
 }
 
-.btn-edit-subject {
+/* .btn-edit-subject {
   margin-left: 5px;
   padding: 0;
   transform: translateY(2px);
@@ -181,7 +225,9 @@ tr:hover .table-edit-link {
   border: none;
   width: 20px;
   height: 20px;
-}
+  margin: 0px 5px;
+  padding-top: 2px;
+} 
 
 .btn-edit-subject:hover {
   cursor: pointer;
@@ -191,6 +237,7 @@ tr:hover .table-edit-link {
   width: 100%;
   height: 100%;
 }
+*/
 
 /* Mobile */
 @media screen and (max-width: 400px) {
