--- a/react-frontend/src/index.css
+++ b/react-frontend/src/index.css
@@ -120,6 +120,11 @@ tr:hover .table-edit-link {
   background-color: #4b6a99;
 }
 
+.table-row-clickable:hover {
+  cursor: pointer;
+  color: rgb(81, 132, 209);
+}
+
 /* Heading styling */
 
 .heading-container {
@@ -217,7 +222,7 @@ form p {
   margin-right: 0px;
 }
 
-/* .btn-edit-subject {
+.btn-edit-subject {
   margin-left: 5px;
   padding: 0;
   transform: translateY(2px);
@@ -227,7 +232,7 @@ form p {
   height: 20px;
   margin: 0px 5px;
   padding-top: 2px;
-} 
+}
 
 .btn-edit-subject:hover {
   cursor: pointer;
@@ -237,7 +242,6 @@ form p {
   width: 100%;
   height: 100%;
 }
-*/
 
 /* Mobile */
 @media screen and (max-width: 400px) {
